# cpp-cmake-template

./: CMakeLists.txt  Makefile  README.md
